--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <ul>
             <li>Vagrant</li>
-            <li>Docker</li>
+            <li>Docker: Creando containers</li>
             <li>Ansible</li>
             <li>Integración Continua</li>
             <li>Curso de Java</li>
