--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li>Docker</li>
             <li>Ansible</li>
             <li>Integración Continua</li>
+            <li>Curso de Java</li>
         </ul>
     </body>
 </html>
