--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <ul>
-            <li>Vagrant</li>
+            <li>Vagrant: Gerenciando maquinas virtuales</li>
             <li>Docker: Creando containers</li>
             <li>Ansible</li>
             <li>Integración Continua</li>
